Improved rule and FE

--- a/the-perfect-spot-FE/src/app/components/recipe-form/recipe-form.component.html
+++ b/the-perfect-spot-FE/src/app/components/recipe-form/recipe-form.component.html
@@ -1,7 +1,5 @@
-<div class="wrapper d-flex align-items-stretch">
-    <div style="height: 100vh;">
-      <app-navigation-bar></app-navigation-bar>
-    </div>
+<div class="container h-100 ">
+  <div class="d-flex justify-content-center h-100">
     <div class="m-3 w-100">
       <h1 class="mb-4">Request recipe</h1>
       <div class="ml-5 mr-5">
@@ -62,3 +60,4 @@
       </div>
     </div>
   </div>
+</div>
