--- a/the-perfect-spot-FE/src/app/components/home-page/home-page.component.html
+++ b/the-perfect-spot-FE/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,8 @@
-<app-recipe-form></app-recipe-form>
+<div class="wrapper d-flex align-items-stretch">
+  <div style="height: 100vh;">
+    <app-navigation-bar></app-navigation-bar>
+  </div>
+  <div class="m-3">
+
+  </div>
+</div>
