--- a/the-perfect-spot-FE/src/app/components/login/login.component.html
+++ b/the-perfect-spot-FE/src/app/components/login/login.component.html
@@ -5,22 +5,28 @@
     <div class="user_card">
       <div class="d-flex justify-content-center">
         <div class="brand_logo_container">
-          <img src="https://thestationhouse.com/wp-content/uploads/2017/07/Christmas-15-512.png" class="brand_logo" alt="Logo">
+          <img src="assets/images/plate.png" class="brand_logo" alt="Logo">
         </div>
       </div>
       <div class="d-flex justify-content-center form_container">
-        <form>
+        <form [formGroup]="loginForm" (ngSubmit)="loginUser()">
           <div class="input-group mb-3">
             <div class="input-group-append">
               <span class="input-group-text"><i class="fas fa-user"></i></span>
             </div>
-            <input type="text" name="" class="form-control input_user" value="" placeholder="username">
+            <input type="text" name="" formControlName="email" class="form-control input_user" value="" placeholder="email">
+          </div>
+          <div *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched" class="inputErrorMessage">
+            <small *ngIf="loginForm.controls['email'].errors?.required" class="text-danger">* Please enter email</small>
           </div>
           <div class="input-group mb-2">
             <div class="input-group-append">
               <span class="input-group-text"><i class="fas fa-key"></i></span>
             </div>
-            <input type="password" name="" class="form-control input_pass" value="" placeholder="password">
+            <input type="password" name="" class="form-control input_pass" value="" formControlName="password" placeholder="password">
+          </div>
+          <div *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched" class="inputErrorMessage">
+            <small *ngIf="loginForm.controls['password'].errors?.required" class="text-danger">* Please enter password</small>
           </div>
           <div class="form-group">
             <div class="custom-control custom-checkbox">
@@ -29,14 +35,14 @@
             </div>
           </div>
           <div class="d-flex justify-content-center mt-3 login_container">
-            <button type="button" name="button" class="btn login_btn">Login</button>
+            <button name="button" class="btn login_btn" [disabled]="!loginForm.valid">Login</button>
           </div>
         </form>
       </div>
 
       <div class="mt-4">
         <div class="d-flex justify-content-center links">
-          Don't have an account? <a href="#" class="ml-2">Sign Up</a>
+          Already have an account? <a href="/sign-up" class="ml-2">Sign Up</a>
         </div>
         <div class="d-flex justify-content-center links">
           <a href="#">Forgot your password?</a>
