--- a/the-perfect-spot-FE/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/the-perfect-spot-FE/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 
-<nav id="sidebar" class="h-100">
-  <div class="pt-4 pl-4 pr-4">
+<nav id="sidebar" class="navBarHeight h-100">
+  <div class="pt-4 pl-4 pr-4 ">
     <img src="assets/images/plate.png" class=" mb-3 "  width="170" height="150" alt="The perfect meal">
     <ul class="list-unstyled components mb-5">
       <li>
