--- a/the-perfect-spot-FE/src/styles.css
+++ b/the-perfect-spot-FE/src/styles.css
@@ -6,3 +6,6 @@ html {
   height: 100%;
   background: #60a3bc !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
