--- a/the-perfect-spot-FE/src/app/components/restaurants/restaurants.component.css
+++ b/the-perfect-spot-FE/src/app/components/restaurants/restaurants.component.css
@@ -1,3 +1,13 @@
 ::ng-deep .mat-paginator {
   background-color: #f39c12;
+  border-radius: 25px;
+  bottom: 0;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.round{
+
 }
