restaurant recommendation, grading restaurants

--- a/the-perfect-spot-FE/src/app/components/change-password/change-password.component.html
+++ b/the-perfect-spot-FE/src/app/components/change-password/change-password.component.html
@@ -3,8 +3,8 @@
     <app-navigation-bar></app-navigation-bar>
   </div>
 
-    <div class="container ml-auto mr-auto m-5 w-55 border pt-5 pl-5 pr-5 pb-0 bg-white shadow-lg rounded">
-      <h1 class="ml-3 font-weight-bold mb-3">Change password</h1>
+    <div class="container ml-auto mr-auto m-5 w-55 border pt-5 pl-5 pr-5 pb-0 bg-white shadow-lg round">
+      <h1 class="  mb-3">Change password</h1>
 
       <form class="form-horizontal align-content-center" [formGroup]="changePasswordForm" (ngSubmit)="changePassword()">
         <div class="form-group">
