--- a/the-perfect-spot-FE/src/app/components/change-password/change-password.component.css
+++ b/the-perfect-spot-FE/src/app/components/change-password/change-password.component.css
@@ -5,3 +5,23 @@
 .inputError {
   color: crimson;
 }
+.mat-raised-button.mat-primary {
+  background-color: #60a3bc;
+}
+.mat-raised-button.mat-warn {
+  background-color: #c0392b;
+}
+
+h1 {
+  text-align: center;
+}
+.parent {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.round{
+  border-radius: 25px;
+}
