--- a/the-perfect-spot-FE/src/app/components/filter-restaurants/filter-restaurants.component.html
+++ b/the-perfect-spot-FE/src/app/components/filter-restaurants/filter-restaurants.component.html
@@ -1,5 +1,5 @@
 <div class="w-100 mt-3 mb-3">
-  <form class=" shadow  stil parent example-form w-100" [formGroup]="filterForm" (ngSubmit)="filterRestaurants()" >
+  <form class=" shadow  stil parent example-form w-100" [formGroup]="filterForm" >
     <mat-form-field appearance="outline" class="w-25 ml-5 mr-2 mt-2">
       <mat-label>Select cuisine(s)</mat-label>
       <mat-select id="cuisines" formControlName="cuisines" multiple >
@@ -24,7 +24,7 @@
       <mat-label>Search restaurants</mat-label>
       <input matInput id="nameRes" class="mr-5" formControlName="restName" type="text" >
     </mat-form-field>
-    <button mat-raised-button color="primary" id="search" class="btn-block mr-5" [disabled]="filterForm.controls['restName'].value == ''"  (click)="onApplyFilter()"><mat-icon>search</mat-icon></button>
+    <button mat-raised-button color="primary" id="search" class="btn-block mr-5" [disabled]="filterForm.controls['restName'].value == ''"  (click)="onSearch()"><mat-icon>search</mat-icon></button>
 
 
   </form>
