--- a/the-perfect-spot-FE/src/app/components/profile/profile.component.html
+++ b/the-perfect-spot-FE/src/app/components/profile/profile.component.html
@@ -3,8 +3,8 @@
     <app-navigation-bar></app-navigation-bar>
   </div>
 
-      <div class="ml-auto mr-auto m-5 w-55 border pt-5 pl-5 pr-5 pb-0 bg-white shadow-lg rounded ">
-        <h1 class="ml-3 font-weight-bold mb-3">Profile</h1>
+      <div class="ml-auto mr-auto m-5 w-55 border pt-5 pl-5 pr-5 pb-0 bg-white shadow round ">
+        <h1 class="mb-5">Profile</h1>
         <div class="row mb-5 ">
 
           <div class="col-md-4 border-right">
