--- a/the-perfect-spot-FE/src/app/components/restaurant/restaurant.component.html
+++ b/the-perfect-spot-FE/src/app/components/restaurant/restaurant.component.html
@@ -1,4 +1,4 @@
-<div class="cardHeight cardBackground mt-4">
+<div class="cardHeight cardBorder cardBackground mt-4">
   <div class="card shadow h-25 clickable {{workingClass}}" id="card{{restaurant.id}}">
     <div (click)="showDetails()">
       <img class="card-img-top" style="height: 150px;" [alt]="restaurant.name" *ngIf="restaurant.image === null" src="https://c.ndtvimg.com/2020-01/hqocblio_restaurant-_625x300_14_January_20.jpg">
