--- a/the-perfect-spot-FE/src/app/components/restaurants/restaurants.component.html
+++ b/the-perfect-spot-FE/src/app/components/restaurants/restaurants.component.html
@@ -2,7 +2,7 @@
   <div style="height: 158vh;">
     <app-navigation-bar></app-navigation-bar>
   </div>
-  <div class="m-5 w-100 shadow round">
+  <div class="m-5 w-100 shadow round stil">
       <h1>Restaurants</h1>
     <div  id="restaurants" class="row col-md-12 w-100 pt-1 pl-auto pr-auto">
 
