--- a/the-perfect-spot-FE/src/app/components/restaurant/restaurant.component.css
+++ b/the-perfect-spot-FE/src/app/components/restaurant/restaurant.component.css
@@ -7,7 +7,10 @@
 .bellBtn {
   width: 13%;
 }
-
+.cardBorder{
+  border: 3px solid #c0392b;
+margin-left: 22px;
+}
 .clickable {
   cursor: pointer;
 }
