recommended restaurant modal

--- a/the-perfect-spot-FE/src/app/components/restaurant-form/restaurant-form.component.html
+++ b/the-perfect-spot-FE/src/app/components/restaurant-form/restaurant-form.component.html
@@ -19,8 +19,7 @@
         <mat-form-field appearance="outline" class="w-25 ml-5 mr-2 mt-2" >
           <mat-label>Select occassion</mat-label>
           <mat-select id="occassion" formControlName="occassion" required >
-            <mat-option value="CELEBRATION_DAY">Celebration by day</mat-option>
-            <mat-option value="CELEBRATION_NIGHT">Celebration by night</mat-option>
+            <mat-option value="CELEBRATION_DAY">Celebration</mat-option>
             <mat-option value="FRIEND_MEAL">Meal with friends</mat-option>
             <mat-option value="ROMANTIC_DATE">Romantic date</mat-option>
             <mat-option value="FAMILY_WITH_KIDS">Family meal with kids</mat-option>
