- Recipe FE, with some bugs

--- a/the-perfect-spot-FE/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/the-perfect-spot-FE/src/app/components/navigation-bar/navigation-bar.component.html
@@ -13,7 +13,7 @@
         <a routerLink="/recipes"><span class="fas fa-book mr-3"></span> Recipes</a>
       </li>
       <li *ngIf="isUser()">
-        <a routerLink="/restaurant-recommendation" class="ml-5">Recipes recommendation</a>
+        <a routerLink="/recipe-recommendation" class="ml-5">Recipes recommendation</a>
       </li>
       <li>
         <a routerLink="/restaurants"><span class="fas fa-utensils mr-3"></span> Restaurants</a>
