--- a/the-perfect-spot-FE/src/app/components/restaurant-modal/restaurant-modal.component.html
+++ b/the-perfect-spot-FE/src/app/components/restaurant-modal/restaurant-modal.component.html
@@ -6,7 +6,7 @@
     <div class="before"></div>
   <div class="card shadow h-25 clickable " id="card{{restaurant.id}}">
 
-    <div (click)="showDetails()" >
+    <div mat-dialog-close (click)="showDetails()" >
       <img class="card-img-top" style="height: 150px;" [alt]="restaurant.name" *ngIf="restaurant.image === null" src="https://c.ndtvimg.com/2020-01/hqocblio_restaurant-_625x300_14_January_20.jpg">
       <img class="card-img-top" style="height: 150px;" [alt]="restaurant.name" *ngIf="restaurant.image !== null" [src]="'data:image/png;base64,'+restaurant.image.picByte">
       <div class="card-body">
