--- a/the-perfect-spot-FE/src/app/components/recipe/recipe.component.html
+++ b/the-perfect-spot-FE/src/app/components/recipe/recipe.component.html
@@ -1,7 +1,7 @@
 <div class="cardHeight cardBorder cardBackground mt-4">
     <div class="card shadow h-25 clickable {{workingClass}}" id="card{{recipe.id}}">
       <div (click)="showDetails()">
-        <img class="card-img-top" style="height: 150px;" [alt]="recipe.name" *ngIf="recipe.image === null" src="https://c.ndtvimg.com/2020-01/hqocblio_restaurant-_625x300_14_January_20.jpg">
+        <img class="card-img-top" style="height: 150px;" [alt]="recipe.name" *ngIf="recipe.image === null" src="https://www.thespruceeats.com/thmb/-eFb_9SMgWh2xcuVhH6Q60nMv6k=/2048x1152/smart/filters:no_upscale()/easy-homemade-vegetable-soup-3377947-31_preview-5afc8602119fa80037e24fa2.jpeg">
         <img class="card-img-top" style="height: 150px;" [alt]="recipe.name" *ngIf="recipe.image !== null" [src]="'data:image/png;base64,'+recipe.image.picByte">
         <div class="card-body">
           <div style="height: 50px;">
@@ -9,7 +9,7 @@
             <h5> <i class="fa fa-star float-right" aria-hidden="true" title="Average grade"> {{recipe.grade.toFixed(2)}}</i></h5>
   
           </div>
-          <mat-star-rating *ngIf="isUser()" [recipeName]="recipe.name" [rating]="rating"  [starCount]=5 [color]="starColor" (ratingUpdated)="onRatingChanged($event)"></mat-star-rating>
+          <mat-star-rating-recipe *ngIf="isUser()" [recipeName]="recipe.name" [rating]="rating"  [starCount]=5 [color]="starColor" (ratingUpdated)="onRatingChanged($event)"></mat-star-rating-recipe>
         </div>
       </div>
       <div class="pl-2">
